src/core/jit/snapshots/tailcall__core__jit__builder__tests__unions.snap
---
source: src/core/jit/builder.rs
expression: plan
---
ExecutionPlan {
    parent: [
        Field {
            id: 0,
            name: "getUserIdOrEmail",
            ir: "Some(..)",
            type_of: UserIdOrEmail,
            args: [
                Arg {
                    id: 0,
                    name: "id",
                    type_of: ID!,
                    value: Some(
                        Number(
                            Number(1),
                        ),
                    ),
                    default_value: None,
                },
            ],
        },
    ],
    children: [
        Field {
            id: 0,
            name: "getUserIdOrEmail",
            ir: "Some(..)",
            type_of: UserIdOrEmail,
            args: [
                Arg {
                    id: 0,
                    name: "id",
                    type_of: ID!,
                    value: Some(
                        Number(
                            Number(1),
                        ),
                    ),
                    default_value: None,
                },
            ],
        },
    ],
    variables: Variables(
        {},
    ),
}
